# udacity_de_project_04_data_lake

./: .gitignore  README.md  etl.py  pyproject.toml
