[tool.poetry]
name = "udacity-de-project-04-data-lake"
version = "0.1.0"
description = ""
authors = ["Fred <fred.mny@gmail.com>"]
readme = "README.md"
packages = [{include = "udacity_de_project_04_data_lake"}]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.3.1"
boto3 = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
